# agz-utils

./: .gitignore  CMakeLists.txt  README.md
ext/avir/: avir.h
ext/glew/: CMakeLists.txt  glew.pc
include/agz-utils/: alloc.h  console.h  container.h  event.h  graphics_api.h  image.h  math.h  misc.h  system.h  thread.h  time.h
include/agz-utils/alloc/: alloc.h  mem_arena.h  obj_arena.h  obj_pool.h  releaser.h
include/agz-utils/common/: common.h
include/agz-utils/console/: pbar.h
include/agz-utils/container/: interval_mgr.h
include/agz-utils/event/: keycode.h
include/agz-utils/file/: dir.h
include/agz-utils/graphics_api/d3d11/: common.h  demo.h  immediate.h  mouse.h  renderTarget.h  shader.h  texture2d.h
include/agz-utils/graphics_api/d3d12/: buffer.h  buffer.inl  commandList.h  common.h  d3d12Context.h  debug.h  descriptorAllocator.h  descriptorHeap.h  descriptorHeapRaw.h  device.h  frameFence.h  imguiIntegration.h  immediateCommandList.h  input.h  mipmapGenerator.h  pipeline.h  queueWaiter.h  resourceManager.h  resourceUploader.h  rootSignature.h  shaderCompiler.h  swapChain.h  textureLoader.h  uniqueResource.h  viewDescHelper.h  window.h
include/agz-utils/graphics_api/gl/: buffer.h  common.h  immediate2d.h  keyboard.h  mouse.h  shader.h  vertex_array_object.h  window.h
include/agz-utils/graphics_api/imgui/: imgui_impl_dx11.h  imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_win32.h
include/agz-utils/image/: load_image.h  save_image.h
include/agz-utils/math/: math.h
include/agz-utils/misc/: construct_from_tuple.h  detect.h  dyn_static_call.h  endian.h  hash.h  lazy_constructor.h  pretty_typename.h  reflection.h  scope_assignment.h  scope_guard.h  span.h  type_list.h  uint_ptr_variant.h  unique_resource.h  unreachable.h  variant.h
include/agz-utils/texture/: mipmap.h  sample2d.h  sample3d.h  texture2d.h
include/agz-utils/thread/: blocking_queue.h  count_down_latch.h  parallel_foreach.h  parallel_foreach_pooled.h  spinlock.h
include/agz-utils/time/: fps_counter.h
include/agz/utility/: alloc.h  console.h  container.h  d3d11.h  event.h  file.h  graphics_api.h  math_cuda.h  mesh.h  misc.h  opengl.h  string.h  texture.h  thread.h  time.h
include/agzm/: agzm.h  color3.h  color4.h  common.h  mat3_c.h  mat3_c.inl  mat4_c.h  mat4_c.inl  spherical_harmonics.h  swizzle.h  transform3.h  vec.h  vec2.h  vec2.inl  vec3.h  vec4.h  vec4.inl
include/agzm/impl/: color3.inl  color4.inl  mat3_c.inl  mat4_c.inl  spherical_harmonics.inl  swizzle_color3.inl  swizzle_color4.inl  swizzle_vec2.inl  swizzle_vec3.inl  transform3.inl  vec.inl  vec2.inl  vec3.inl  vec4.inl
src/: CMakeLists.txt
src/common/: common.cpp
src/d3d11/: D3DInit.cpp  D3DInit.h  KeyCode.cpp  Mouse.cpp  Window.cpp
src/d3d11/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp  input_dispatcher.cpp
src/event/: keycode.cpp
src/file/: file_raw.cpp
src/graphics_api/d3d11/: device.cpp  deviceContext.cpp  mouse.cpp  texture2d.cpp  vertexArrayObject.cpp  window.cpp
src/graphics_api/d3d12/: buffer.cpp  commandList.cpp  debug.cpp  descriptorAllocator.cpp  descriptorHeap.cpp  descriptorHeapRaw.cpp  device.cpp  imguiIntegration.cpp  input.cpp  mipmapGenerator.cpp  pipeline.cpp  queueWaiter.cpp  renderGraph.cpp  renderGraph2.cpp  renderGraphBuilder.cpp  resourceManager.cpp  resourceUploader.cpp  rootSignature.cpp  shaderCompiler.cpp  swapChain.cpp  textureLoader.cpp  viewDescHelper.cpp  window.cpp
src/graphics_api/gl/: immediate2d.cpp  mouse.cpp  window.cpp
src/graphics_api/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_dx11.cpp  imgui_impl_dx12.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp  inputDispatcher.cpp
src/image/: load_image.cpp  save_image.cpp  stb_image.h  stb_image_write.h
src/include/: CMakeLists.txt
src/include/agz/utility/: alloc.h  file.h  image.h  math.h  misc.h  opengl.h  string.h  system.h  texture.h  thread.h  utility.h
src/include/agz/utility/alloc/: alloc.h  arena.h  obj_pool.h  releaser.h
src/include/agz/utility/alloc/impl/: arena.inl
src/include/agz/utility/common/: common.h
src/include/agz/utility/console/: pbar.h
src/include/agz/utility/file/: dir.h  file_raw.h
src/include/agz/utility/image/: common.h  load_image.h  save_image.h
src/include/agz/utility/math/: color2.h  color4.h  common.h  mat4_c.h  math.h  swizzle.h  tensor.h  transform3.h  vec.h
src/include/agz/utility/math/decl/: collision.h  color2.h  color3.h  color4.h  common.h  coord.h  distribution.h  func.h  mat3_c.h  mat4_c.h  swizzle.h  tensor.h  transform2.h  transform3.h  vec.h  vec2.h  vec3.h  vec4.h
src/include/agz/utility/math/impl/: color2.inl  color3.inl  color4.inl  coord.inl  distribution.inl  mat3_c.inl  mat4_c.inl  spherical_harmonics.inl  swizzle_color2.inl  tensor.inl  transform2.inl  transform3.inl  vec.inl  vec2.inl  vec3.inl  vec4.inl
src/include/agz/utility/mesh/: load_mesh.h
src/include/agz/utility/misc/: bitcast.h  exception.h  hash.h  scope_assignment.h  scope_guard.h  span.h  type_list.h  uncopyable.h  unreachable.h  variant.h
src/include/agz/utility/opengl/: attrib.h  buffer.h  common.h  framebuffer.h  program.h  shader.h  texture2d.h  uniform.h
src/include/agz/utility/string/: stdstr.h
src/include/agz/utility/string/impl/: stdstr.inl
src/include/agz/utility/system/: library.h  platform.h  shell.h
src/include/agz/utility/texture/: sample.h  texture2d.h
src/include/agz/utility/texture/impl/: texture2d.inl
src/include/agz/utility/thread/: blocking_queue.h  count_down_latch.h  parallel_foreach.h  queue_executer.h  spinlock.h
src/include/agz/utility/time/: clock.h
src/mesh/: load_mesh.cpp  stl_reader.h  tiny_obj_loader.h
src/misc/: base64.cpp
src/src/file/: file_raw.cpp
src/src/image/: load_image.cpp  save_image.cpp  stb_image.h  stb_image_write.h
src/src/mesh/: load_mesh.cpp
src/src/system/: library.cpp  shell.cpp
src/system/: library.cpp  shell.cpp
test/: main.cpp  math.cpp  test.cpp  vec.cpp
(+372 files in other folders)
