CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(AGZ_UTILITY)

FILE(GLOB_RECURSE UTILITY_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/include/agz/utility/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/utility/*.inl")
ADD_LIBRARY(AGZUtils STATIC ${UTILITY_SRC})

FOREACH(_SRC IN ITEMS ${UTILITY_SRC})
    GET_FILENAME_COMPONENT(UTILITY_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/utility" "include" _GRP_PATH "${UTILITY_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF(MSVC)
	ADD_DEFINITIONS(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
ENDIF()

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
ENDIF()

SET_PROPERTY(TARGET AGZUtils PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET AGZUtils PROPERTY CXX_STANDARD_REQUIRED ON)

IF(DEFINED AGZ_ENABLE_D3D11 AND AGZ_ENABLE_D3D11)
	SET(AGZ_D3D11_LIBS d3d11.lib dxgi.lib d3dcompiler.lib dxguid.lib)
	TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_ENABLE_D3D11)
ENDIF()

SET(AGZUtils_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/" CACHE STRING "include directories for agz utility lib")
SET(AGZUtils_LIBRARIES AGZUtils ${AGZ_D3D11_LIBS} CACHE STRING "link libraries for agz utility lib")

TARGET_INCLUDE_DIRECTORIES(AGZUtils PUBLIC ${AGZUtils_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(AGZUtils PUBLIC ${AGZ_D3D11_LIBS})
