CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(AGZ_UTILITY)

FILE(GLOB_RECURSE UTILITY_SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/include/agz/utility/*.h"
		"${PROJECT_SOURCE_DIR}/include/agz/utility/*.inl")
ADD_LIBRARY(AGZUtils STATIC ${UTILITY_SRC})

FOREACH(_SRC IN ITEMS ${UTILITY_SRC})
    GET_FILENAME_COMPONENT(UTILITY_SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/utility" "include" _GRP_PATH "${UTILITY_SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
	SET_PROPERTY(TARGET AGZUtils PROPERTY "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread	")
	SET_PROPERTY(TARGET AGZUtils PROPERTY "c++fs")
ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
	SET_PROPERTY(TARGET AGZUtils PROPERTY "${CMAKE_CXX_FLAGS} -pthread")
	SET_PROPERTY(TARGET AGZUtils PROPERTY "stdc++fs")
ENDIF()

SET_PROPERTY(TARGET AGZUtils PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET AGZUtils PROPERTY CXX_STANDARD_REQUIRED ON)

SET(AGZUtils_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
SET(AGZUtils_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/" PARENT_SCOPE)

TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE ${AGZUtils_INCLUDE_DIRS})
